# Sanjiv

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DATA_CONTRACTS.md  DECISIONS.md  DEMO_RUNBOOK.md  IMPLEMENTATION_PLAN.md  MODEL_SPECIFICATION.md  MONITORING.md  OPERATIONS_RUNBOOK.md  OVERNIGHT_EXECUTION_LOG.md  PHASE_1_LIVE_MARITIME_WATCH.md  PRODUCT_SPEC.md  RECOVERY_RUNBOOK.md  REQUIREMENTS_TRACEABILITY.md  RISK_REGISTER.md  SECURITY_REVIEW.md  SOURCE_REGISTRY.md  TEST_STRATEGY.md
e2e/: decision-flow.spec.ts  performance.spec.ts
infra/: Dockerfile.api  Dockerfile.web
scripts/: backup_restore.py  benchmark_phase9.py  contracts.mjs  demo_preflight.py  export_openapi.py  reliability_drill.py  run-uv.mjs  sanjiv.mjs  sanjiv.ps1  sanjiv.sh  security_scan.py  seed_demo.py
submission/: Sanjiv_ET_AI_Hackathon_Pitch_Deck_Final.pptx
tests/: maritime_helpers.py  procurement_helpers.py  reserve_helpers.py  risk_helpers.py  scenario_helpers.py  test_aisstream_adapter.py  test_branding.py  test_contracts.py  test_health.py  test_maritime_api.py  test_maritime_broker.py  test_maritime_geofences.py  test_maritime_normalization.py  test_maritime_postgres.py  test_maritime_replay.py  test_maritime_sanctions.py  test_maritime_service.py  test_phase1_migration.py  test_phase2_migration.py  test_phase3_migration.py  test_phase4_migration.py  test_phase8.py  (+29 more)
(+165 files in other folders)
